--- a/composer.json
+++ b/composer.json
@@ -1,68 +1,85 @@
 {
-  "name":             "pattern-lab/edition-mustache-standard",
-  "description":      "The Standard Edition of Pattern Lab for Mustache. Installs all Mustache-related dependencies.",
-  "keywords":         ["pattern lab", "mustache"],
+  "name":             "pattern-lab/edition-drupal-standard",
+  "description":      "Standard Edition of Pattern Lab for Drupal. (Drupal 9+)",
+  "keywords":         ["pattern lab", "drupal"],
   "homepage":         "http://patternlab.io",
-  "license":          "MIT",
+  "license":          "GPL-2.0+",
   "type":             "project",
   "authors": [
-    {
-      "name":         "Dave Olsen",
-      "email":        "dmolsen@gmail.com",
-      "homepage":     "http://dmolsen.com",
-      "role":         "Lead Developer"
-    }
+      {
+          "name":         "Dave Olsen",
+          "email":        "dmolsen@gmail.com",
+          "homepage":     "http://dmolsen.com",
+          "role":         "Lead Developer"
+      },
+      {
+          "name":         "Evan Lovely",
+          "homepage":     "http://evanlovely.com",
+          "role":         "Developer"
+      },
+      {
+          "name":         "Karuna Patel",
+          "homepage":     "https://protiviti.com",
+          "role":         "Developer / Contributor"
+      },
+      {
+          "name":         "Lee Quessenberry",
+          "homepage":     "https://protiviti.com",
+          "role":         "Developer / Contributor"
+      }
   ],
   "support": {
-    "issues":         "https://github.com/pattern-lab/patternlab-php/issues",
-    "wiki":           "http://patternlab.io/docs/",
-    "source":         "https://github.com/pattern-lab/patternlab-php/releases"
+      "issues":         "https://github.com/pattern-lab/edition-drupal-standard/issues",
+      "wiki":           "http://patternlab.io/docs/",
+      "source":         "https://github.com/pattern-lab/edition-drupal-standard/releases"
   },
   "autoload": {
-    "psr-0": {
-      "PatternLab":   "core/src/"
-    }
+      "psr-0": {
+          "PatternLab":   "core/src/"
+      }
   },
   "require": {
-    "php": ">=5.4",
-    "pattern-lab/core": "^2.0.0",
-    "pattern-lab/patternengine-mustache": "^2.0.0",
-    "pattern-lab/styleguidekit-mustache-default": "^3.0.0",
-    "pattern-lab/plugin-reload": "^2.0.0"
+      "php": ">=7.4.3 || ^8.0",
+      "pattern-lab/core": "^2.8",
+      "pattern-lab/patternengine-twig": "^2.2.2",
+      "pattern-lab/styleguidekit-twig-default": "^3.0.0",
+      "pattern-lab/drupal-twig-components": "^2.2.0",
+      "aleksip/plugin-data-transform": "^1.4"
   },
   "scripts": {
-    "server": "php core/console --server",
-    "generate": "php core/console --generate",
-    "watch": "php core/console --watch",
-    "start": "php core/console --server --with-watch",
-    "install-demo": "php core/console --starterkit --install pattern-lab/starterkit-mustache-demo",
-    "post-install-cmd": [
-      "PatternLab\\Installer::postInstallCmd"
-    ],
-    "post-update-cmd": [
-      "PatternLab\\Installer::postUpdateCmd"
-    ],
-    "post-root-package-install": [
-      "PatternLab\\Installer::setProjectInstall",
-      "PatternLab\\Installer::getSuggestedStarterKits",
-      "PatternLab\\Installer::getConfigOverrides"
-    ],
-    "post-package-install": [
-      "PatternLab\\Installer::postPackageInstall"
-    ],
-    "post-package-update": [
-      "PatternLab\\Installer::postPackageUpdate"
-    ],
-    "pre-package-uninstall": [
-      "PatternLab\\Installer::prePackageUninstall"
-    ]
-  },
-  "extra": {
-    "patternlab": {
-      "starterKitSuggestions": [
-        "pattern-lab/starterkit-mustache-demo",
-        "pattern-lab/starterkit-mustache-base"
+      "server": "php core/console --server",
+      "generate": "php core/console --generate",
+      "watch": "php core/console --watch",
+      "start": "php core/console --server  --quiet & php core/console --watch",
+      "post-install-cmd": [
+        "PatternLab\\Installer::postInstallCmd"
+      ],
+      "post-update-cmd": [
+        "PatternLab\\Installer::postUpdateCmd"
+      ],
+      "post-root-package-install": [
+        "PatternLab\\Installer::setProjectInstall",
+        "PatternLab\\Installer::getSuggestedStarterKits",
+        "PatternLab\\Installer::getConfigOverrides"
+      ],
+      "post-package-install": [
+        "PatternLab\\Installer::postPackageInstall"
+      ],
+      "post-package-update": [
+        "PatternLab\\Installer::postPackageUpdate"
+      ],
+      "pre-package-uninstall": [
+        "PatternLab\\Installer::prePackageUninstall"
       ]
-    }
+    },
+  "extra": {
+      "patternlab": {
+          "starterKitSuggestions": [
+              "pattern-lab/starterkit-twig-demo",
+              "pattern-lab/starterkit-twig-drupal-minimal",
+              "aleksip/starterkit-shila-drupal-theme",
+              "forumone/starterkit-twig-drupal-gesso"
+          ]
+      }
   }
 }
